--- a/Public/index.html
+++ b/Public/index.html
@@ -24,15 +24,17 @@
     "url":"https://www.facebook.com/1.kioskito"
   }
   </script>
+
+  
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
+<nav id="siteNav" class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center brand" href="#">
       <img class="logo" src="assets/icono-el-kioskito.jpg" alt="El Kioskito">
-      <span class="fw-bold">Restaurante El Kioskito</span>
+      <span class="fw-bold"></span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-label="Abrir menú">
       <span class="navbar-toggler-icon"></span>
@@ -63,31 +65,39 @@
        data-bs-touch="true"
        data-bs-keyboard="true"
        data-bs-wrap="true">
+
+        <!-- Imagen -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/Pozole.jpg" alt="Pozole tradicional">
+        <img src="assets/Pozole.jpg" class="d-block w-100 hero-media" alt="Pozole tradicional">
       </div>
-      <div class="carousel-item">
-        <video class="d-block w-10" autoplay muted loop playsinline>
+        <!-- Video 1 -->
+    <div class="carousel-item">
+      <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-promo.jpg">
         <source src="assets/2025-08-22 El Kioskito PROMO 2x1.mp4" type="video/mp4">
         Tu navegador no soporta video HTML5.
       </video>
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=2000&auto=format&fit=crop" alt="Tortas caseras" loading="lazy">
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1604908554007-79d5b3a4c5a8?q=80&w=2000&auto=format&fit=crop" alt="Carne asada" loading="lazy">
-      </div>
     </div>
 
-    <!-- Controles (opcional) -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" aria-label="Anterior">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" aria-label="Siguiente">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </button>
+    <!-- Video 2 -->
+    <div class="carousel-item">
+      <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-general.jpg">
+        <source src="assets/2025-08-22 El Kioskito GENERAL.mp4" type="video/mp4">
+        Tu navegador no soporta video HTML5.
+      </video>
+    </div>
+
+    <!-- Video 3 -->
+    <div class="carousel-item">
+      <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-pedidos.jpg">
+        <source src="assets/2025-08-22 El Kioskito PEDIDOS.mp4" type="video/mp4">
+        Tu navegador no soporta video HTML5.
+      </video>
+    </div>
+
+    </div>
+
+  
 
     <!-- Indicadores (opcional) 
     <div class="carousel-indicators" style="z-index:3;">
@@ -208,9 +218,12 @@
     </div>
 
     <div class="text-center mt-4">
-      <a href="https://wa.me/526241748640?text=Hola%20me%20compartes%20el%20men%C3%BA%20por%20favor" class="btn btn-kioskito btn-lg">
+      <a class="btn btn-kioskito btn-lg"
+         data-bs-toggle="modal"
+         data-bs-target="#menuModal">
         <i class="bi bi-menu-button-wide me-1"></i> Ver Menú Completo
       </a>
+
       <div class="mt-3">
         <span class="pill me-2">Opciones vegetarianas</span>
         <span class="pill me-2">Mezcales con fruta natural</span>
@@ -219,6 +232,45 @@
     </div>
   </div>
 </section>
+
+
+<!-- Modal del menú -->
+<div class="modal fade" id="menuModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-fullscreen-md-down">
+    <div class="modal-content bg-dark">
+      <div class="modal-header border-0">
+        <h5 class="modal-title text-white">Menú</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+
+      <div class="modal-body p-0">
+        <div class="d-none d-md-block" style="height:80vh">
+          <object
+            data="assets/menu-el-kioskito.pdf#view=FitH"
+            type="application/pdf"
+            class="w-100 h-100">
+            <!-- fallback -->
+            <iframe
+              src="assets/menu-el-kioskito.pdf#view=FitH"
+              class="w-100 h-100"
+              style="border:0"></iframe>
+          </object>
+        </div>
+
+        <div class="d-block d-md-none p-4 text-white-50">
+          <p>Si tu teléfono no muestra el PDF, puedes abrirlo o descargarlo aquí:</p>
+          <a class="btn btn-light" href="assets/menu-el-kioskito.pdf" target="_blank" rel="noopener">
+            Abrir / Descargar menú
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 <!-- Experiencia -->
 <section id="experiencia" class="section">
@@ -233,7 +285,7 @@
           <li><i class="bi bi-people me-2 text-success"></i>Ambiente familiar.</li>
           <li><i class="bi bi-music-note-beamed me-2 text-success"></i>Música en vivo con mariachi en días especiales.</li>
           <li><i class="bi bi-ticket-perforated me-2 text-success"></i>Promociones: <strong>2x1 en mezcales</strong> y <strong>miércoles de micheladas</strong>.</li>
-          <li><i class="bi bi-beer me-2 text-success"></i>Cerveza artesanal a precio local.</li>
+          <li><i class="bi bi-cup-straw me-2 text-success"></i>Cerveza artesanal a precio local.</li>
           <li><i class="bi bi-bicycle me-2 text-success"></i>Servicio a domicilio.</li>
         </ul>
         <a class="btn btn-outline-success" href="https://www.facebook.com/1.kioskito" target="_blank" rel="noopener">
@@ -336,10 +388,10 @@
 
 <footer class="py-4" style="background:#142c1d;color:#fff">
   <div class="container d-flex flex-column flex-lg-row justify-content-between gap-2">
-    <div>© <span id="y"></span> Restaurante El Kioskito — Hecho con ♥ en BCS</div>
+    <div>© <span id="y"></span> Restaurante El Kioskito — Hecho con ♥ para BCS</div>
     <div class="d-flex gap-3">
       <a href="https://www.facebook.com/1.kioskito" target="_blank" rel="noopener"><i class="bi bi-facebook me-1"></i>Facebook</a>
-      <a href="https://www.instagram.com/rest_el_kioskito/" target="_blank" rel="noopener"><i class="bi bi-instagram me-4"></i>Instagram</a>
+      <a href="https://www.instagram.com/rest_el_kioskito/" target="_blank" rel="noopener"><i class="bi bi-instagram me-1"></i>Instagram</a>
       <a href="https://maps.app.goo.gl/GiCcKov9t83qEXu79" target="_blank" rel="noopener"><i class="bi bi-geo-alt me-1"></i>Cómo llegar</a>
       <a href="tel:+526241748640"><i class="bi bi-telephone me-1"></i>Llamar</a>
     </div>
@@ -352,30 +404,9 @@
 </a>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  // año dinámico
-  document.getElementById('y').textContent = new Date().getFullYear();
 
-  // scroll suave
-  document.querySelectorAll('a[href^="#"]').forEach(a=>{
-    a.addEventListener('click',e=>{
-      const id=a.getAttribute('href');
-      if(id.length>1){e.preventDefault();document.querySelector(id).scrollIntoView({behavior:'smooth',block:'start'});}
-    });
-  });
+<!-- Tu JS, después -->
+<script src="js/app.js" defer></script>
 
-  // Autoplay del carrusel del hero (refuerzo a los data-attrs)
-  const heroCarouselEl = document.getElementById('heroCarousel');
-  if (heroCarouselEl) {
-    new bootstrap.Carousel(heroCarouselEl, {
-      interval: 4500,
-      ride: 'carousel',
-      pause: false,
-      touch: true,
-      keyboard: true,
-      wrap: true
-    });
-  }
-</script>
 </body>
 </html>
