organizacion de carpetas dentro de assets y mas correciones al index

--- a/Public/index.html
+++ b/Public/index.html
@@ -29,11 +29,13 @@
 </head>
 <body>
 
+  
+
 <!-- Navbar -->
 <nav id="siteNav" class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center brand" href="#">
-      <img class="logo" src="assets/icono-el-kioskito.jpg" alt="El Kioskito">
+      <img class="logo" src="assets/Img/icono-el-kioskito.jpg" alt="El Kioskito">
       <span class="fw-bold"></span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-label="Abrir menú">
@@ -69,12 +71,12 @@
         <!-- Imagen -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/Pozole.jpg" class="d-block w-100 hero-media" alt="Pozole tradicional">
+        <img src="assets/Img/Pozole.jpg" class="d-block w-100 hero-media" alt="Pozole tradicional">
       </div>
         <!-- Video 1 -->
     <div class="carousel-item">
       <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-promo.jpg">
-        <source src="assets/2025-08-22 El Kioskito PROMO 2x1.mp4" type="video/mp4">
+        <source src="assets/Videos/2025-08-22 El Kioskito PROMO 2x1.mp4" type="video/mp4">
         Tu navegador no soporta video HTML5.
       </video>
     </div>
@@ -82,7 +84,7 @@
     <!-- Video 2 -->
     <div class="carousel-item">
       <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-general.jpg">
-        <source src="assets/2025-08-22 El Kioskito GENERAL.mp4" type="video/mp4">
+        <source src="assets/Videos/2025-08-22 El Kioskito GENERAL.mp4" type="video/mp4">
         Tu navegador no soporta video HTML5.
       </video>
     </div>
@@ -90,7 +92,7 @@
     <!-- Video 3 -->
     <div class="carousel-item">
       <video class="hero-media" autoplay muted loop playsinline preload="metadata" poster="assets/poster-pedidos.jpg">
-        <source src="assets/2025-08-22 El Kioskito PEDIDOS.mp4" type="video/mp4">
+        <source src="assets/Videos/2025-08-22 El Kioskito PEDIDOS.mp4" type="video/mp4">
         Tu navegador no soporta video HTML5.
       </video>
     </div>
@@ -137,7 +139,7 @@
         <a href="#unicos" class="btn btn-outline-success mt-2"><i class="bi bi-arrow-right-circle me-1"></i> Conócenos más</a>
       </div>
       <div class="col-lg-6">
-        <img class="w-100 rounded-4 shadow" src="assets/KIOSKITO-29.jpg" alt="Cocina mexicana casera">
+        <img class="w-100 rounded-4 shadow" src="assets/Img/KIOSKITO-29.jpg" alt="Cocina mexicana casera">
       </div>
     </div>
   </div>
@@ -187,7 +189,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card menu-card">
-          <img src="assets/KIOSKITO-23.jpg" alt="Pozole">
+          <img src="assets/Img/KIOSKITO-23.jpg" alt="Pozole">
           <div class="card-body">
             <span class="badge">Tradicional</span>
             <h5 class="mt-2">Pozole</h5>
@@ -259,7 +261,7 @@
 
         <div class="d-block d-md-none p-4 text-white-50">
           <p>Si tu teléfono no muestra el PDF, puedes abrirlo o descargarlo aquí:</p>
-          <a class="btn btn-light" href="assets/menu-el-kioskito.pdf" target="_blank" rel="noopener">
+          <a class="btn btn-light" href="assets/Img/menu-el-kioskito.pdf" target="_blank" rel="noopener">
             Abrir / Descargar menú
           </a>
         </div>
@@ -272,12 +274,14 @@
 
 
 
+
+
 <!-- Experiencia -->
 <section id="experiencia" class="section">
   <div class="container">
     <div class="row g-4 align-items-center">
       <div class="col-lg-6">
-        <img class="w-100 rounded-4 shadow" src="assets/Promo.png" alt="Ambiente familiar">
+        <img class="w-100 rounded-4 shadow" src="assets/Img/Promo.png" alt="Ambiente familiar">
       </div>
       <div class="col-lg-6">
         <h2 class="section-title mb-3">Más que un restaurante, una experiencia</h2>
@@ -295,6 +299,8 @@
     </div>
   </div>
 </section>
+
+
 
 <!-- Horarios y Ubicación -->
 <section id="ubicacion" class="section bg-beige">
@@ -331,7 +337,7 @@
   <div class="container">
     <div class="row g-4 align-items-center">
       <div class="col-lg-6 order-lg-2">
-        <img class="w-100 rounded-4 shadow" src="assets/Ambiente.png" alt="Catering y eventos">
+        <img class="w-100 rounded-4 shadow" src="assets/Img/Ambiente.png" alt="Catering y eventos">
       </div>
       <div class="col-lg-6">
         <h2 class="section-title mb-3">Llevamos el sabor a tus eventos</h2>
