--- a/Public/index.html
+++ b/Public/index.html
@@ -101,7 +101,7 @@
 
   
 
-    <!-- Indicadores (opcional) 
+    <!-- Indicadores 
     <div class="carousel-indicators" style="z-index:3;">
       <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-label="1"></button>
       <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="2"></button>
@@ -199,7 +199,7 @@
       </div>
       <div class="col-md-4">
         <div class="card menu-card">
-          <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1600&auto=format&fit=crop" alt="Tortas caseras">
+          <img src="assets/Img/imagen_2.jpg" alt="Tortas caseras">
           <div class="card-body">
             <span class="badge">Caseras</span>
             <h5 class="mt-2">Tortas</h5>
@@ -209,7 +209,7 @@
       </div>
       <div class="col-md-4">
         <div class="card menu-card">
-          <img src="https://images.unsplash.com/photo-1604908554007-79d5b3a4c5a8?q=80&w=1600&auto=format&fit=crop" alt="Carne asada">
+          <img src="assets/Img/KIOSKITO-22.jpg" alt="Carne asada">
           <div class="card-body">
             <span class="badge">Estrella</span>
             <h5 class="mt-2">Carne asada</h5>
